# rabot

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/: ra-api-notes.md
docs/superpowers/plans/: 2026-06-03-ra-resale-bot.md
docs/superpowers/specs/: 2026-06-03-ra-resale-bot-design.md
examples/: com.rabot.check.plist
src/rabot/: cli.py  config.py  evaluator.py  notifier.py  ra_client.py  state.py
tests/: test_cli.py  test_config.py  test_evaluator.py  test_notifier.py  test_ra_client.py  test_smoke.py  test_state.py
tests/fixtures/: legacy_available.json  legacy_soldout.json  tickets_available.json  tickets_soldout.json  v2_available.json
